--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  auto_route: ^9.3.0+1
   bloc: ^9.0.0
   flutter_riverpod: ^2.6.1
   provider: ^6.1.2
   flutter_bloc: ^9.0.0
-  auto_route: ^9.3.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   cupertino_icons: ^1.0.8
 
@@ -23,7 +25,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  auto_route_generator: ^9.3.1
+  auto_route_generator: ^9.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.14
 
   flutter_lints: ^5.0.0
 
