--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   provider: ^6.1.2
   flutter_bloc: ^9.0.0
+  get_it: ^8.0.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
